[gd_scene load_steps=30 format=3 uid="uid://4rf8b4e4vhwn"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_f2y3e"]
[ext_resource type="PackedScene" uid="uid://dfe31afh2scn" path="res://Assets/Medieval props/Prefabs/LanternV3.prefab.scn" id="2_bc3gk"]
[ext_resource type="PackedScene" uid="uid://gw43mpgc38j0" path="res://Assets/Medieval props/Prefabs/TableV1.prefab.scn" id="3_44k5r"]
[ext_resource type="FontFile" uid="uid://cyten8y2m54aa" path="res://Assets/Text Font/PentagramsSalemica-B978.ttf" id="4_tr4up"]
[ext_resource type="FontFile" uid="uid://cyl73mjyqjjgn" path="res://Assets/Text Font/Perdition-jEwpv.ttf" id="5_d4mdr"]
[ext_resource type="PackedScene" uid="uid://coyy1mo6xr5dd" path="res://Scene/install_sounds.tscn" id="7_uhwvh"]
[ext_resource type="Animation" uid="uid://do3gebtj1wj31" path="res://Assets/Black_Background.res" id="8_l3so4"]
[ext_resource type="Animation" uid="uid://dqd2fr2k5nqc1" path="res://MainMenu_Camera.res" id="8_wfk5s"]
[ext_resource type="AudioStream" uid="uid://dwnselwknbn6g" path="res://Assets/Sound/Music/Maruci Main Menu (Revised).wav" id="9_d6f4s"]

[sub_resource type="Environment" id="Environment_6sirp"]
background_mode = 1

[sub_resource type="Environment" id="Environment_6lleq"]
tonemap_exposure = 0.7
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_light_energy = 0.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.5247
volumetric_fog_albedo = Color(0, 0, 0, 1)
adjustment_enabled = true
adjustment_brightness = 0.7
adjustment_contrast = 1.1

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_amqes"]
dof_blur_far_enabled = true
dof_blur_far_distance = 36.12
dof_blur_near_enabled = true
dof_blur_near_distance = 0.01

[sub_resource type="FontVariation" id="FontVariation_577sk"]
base_font = ExtResource("4_tr4up")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujjc4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4fgbx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83hlm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uv4xe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uj7kn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fe606"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5k37d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3gf04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gb8h7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffc12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pdcfo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dn30k"]
bg_color = Color(0.369419, 0.121733, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_vqhm1"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_dn30k")

[sub_resource type="Animation" id="Animation_jdy51"]
resource_name = "MainMenu_Ost"

[sub_resource type="Animation" id="Animation_idui2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.027252, 2.76688, 2.02)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/SubViewportContainer/SubViewport/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.151844, 0.879646, -6.14387e-09)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D/SubViewportContainer/SubViewport/Camera3D:attributes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CameraAttributesPractical_amqes")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node3D/SubViewportContainer/SubViewport/Camera3D:attributes:dof_blur_far_distance")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [36.12]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node3D/SubViewportContainer/SubViewport/Camera3D:attributes:dof_blur_near_distance")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("UI/Launch_Black_Background:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7sbnl"]
_data = {
"Black_Background": ExtResource("8_l3so4"),
"MainMenu_Camera": ExtResource("8_wfk5s"),
"MainMenu_Ost": SubResource("Animation_jdy51"),
"RESET": SubResource("Animation_idui2")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_f2y3e")

[node name="Node3D" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node3D"]
environment = SubResource("Environment_6sirp")

[node name="LanternV3" parent="Node3D" instance=ExtResource("2_bc3gk")]
transform = Transform3D(0.077192, 0.00174882, -0.00698364, -0.00348432, 0.0748853, -0.0197606, 0.00629993, 0.0199891, 0.0746403, -0.66432, 2.36469, 0.56662)

[node name="TableV1" parent="Node3D" instance=ExtResource("3_44k5r")]
transform = Transform3D(-0.404777, 0.104764, 0.0280714, -1.08815e-08, -0.10846, 0.404777, 0.10846, 0.390985, 0.104764, -0.65568, 0.395313, -0.94662)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Node3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport"]
transform = Transform3D(0.637424, 0.116549, 0.761648, -6.07318e-09, 0.988494, -0.151261, -0.770513, 0.0964175, 0.63009, -0.027252, 2.76688, 2.02)
environment = SubResource("Environment_6lleq")
attributes = SubResource("CameraAttributesPractical_amqes")
fov = 46.9

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Launch_Black_Background" type="ColorRect" parent="UI"]
show_behind_parent = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Main_Menu" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = -40
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="Title" type="Label" parent="UI/Main_Menu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_577sk")
theme_override_font_sizes/font_size = 150
text = "Maruci"

[node name="General" type="VBoxContainer" parent="UI/Main_Menu"]
layout_mode = 2

[node name="Filler" type="MarginContainer" parent="UI/Main_Menu/General"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Start" type="Button" parent="UI/Main_Menu/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Start Game"

[node name="Filler2" type="MarginContainer" parent="UI/Main_Menu/General"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Settings" type="Button" parent="UI/Main_Menu/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Settings"

[node name="Filler3" type="MarginContainer" parent="UI/Main_Menu/General"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Quit" type="Button" parent="UI/Main_Menu/General"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 65
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Quit"

[node name="Game_State" type="VBoxContainer" parent="UI/Main_Menu"]
visible = false
layout_mode = 2

[node name="Filler" type="MarginContainer" parent="UI/Main_Menu/Game_State"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="Easy" type="Button" parent="UI/Main_Menu/Game_State"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Easy"

[node name="Filler2" type="MarginContainer" parent="UI/Main_Menu/Game_State"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Medium" type="Button" parent="UI/Main_Menu/Game_State"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Medium"

[node name="Filler3" type="MarginContainer" parent="UI/Main_Menu/Game_State"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Hard" type="Button" parent="UI/Main_Menu/Game_State"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Hard"

[node name="Filler4" type="MarginContainer" parent="UI/Main_Menu/Game_State"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Back" type="Button" parent="UI/Main_Menu/Game_State"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Back"

[node name="InstallSounds" parent="UI" instance=ExtResource("7_uhwvh")]
root_path = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -582.0
offset_top = -310.0
offset_right = 582.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="Settings_Background" type="ColorRect" parent="UI/MarginContainer"]
show_behind_parent = true
layout_mode = 2
color = Color(0.207843, 0.0823529, 0, 0.603922)

[node name="Settings" type="MarginContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 95
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/Settings"]
layout_mode = 2

[node name="SettingLabel" type="Label" parent="UI/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 115
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Settings"

[node name="Filler" type="MarginContainer" parent="UI/MarginContainer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="GridContainer" parent="UI/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_vqhm1")
theme_override_constants/h_separation = 130
theme_override_constants/v_separation = 15
columns = 2

[node name="MusicLabel" type="Label" parent="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Sound Effect"

[node name="SFXSlider" type="HSlider" parent="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="Button" parent="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_d4mdr")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujjc4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4fgbx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_83hlm")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_uv4xe")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uj7kn")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fe606")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5k37d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_3gf04")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gb8h7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ffc12")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pdcfo")
text = "Back"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Filler2" type="MarginContainer" parent="UI/MarginContainer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7sbnl")
}
speed_scale = 0.5

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7sbnl")
}
speed_scale = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d6f4s")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="UI/Main_Menu/General/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Main_Menu/General/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Main_Menu/General/Settings" to="UI" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Main_Menu/Game_State/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="UI/Main_Menu/Game_State/Easy" to="UI/Main_Menu/Game_State/Easy" method="_MainMenuStart_on_pressed"]
[connection signal="pressed" from="UI/Main_Menu/Game_State/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="UI/Main_Menu/Game_State/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="UI/Main_Menu/Game_State/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="UI/MarginContainer/Settings/VBoxContainer/HBoxContainer/Back" to="." method="_on_settings_pressed"]
